--- a/home-base.html
+++ b/home-base.html
@@ -4,16 +4,16 @@
 <head>
   <meta name="viewport" content="width=device-width" />
   <meta charSet="utf-8" />
-  <title>david safanyuk and Eunike Olivia&#x27;s Wedding Website - The Knot</title>
+  <title>David Safanyukand Eunike Olivia&#x27;s Wedding Website - The Knot</title>
   <meta name="description"
-    content="Welcome to david safanyuk and Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more at The Knot." />
+    content="Welcome to David Safanyukand Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more at The Knot." />
   <link rel="canonical" href="https://www.theknot.com/us/david-safanyuk-and-eunike-olivia-sep-2023" />
   <meta name="googlebot" content="noindex,nofollow" />
   <meta name="robots" content="noindex,nofollow" />
   <meta property="og:url" content="https://www.theknot.com/us/david-safanyuk-and-eunike-olivia-sep-2023" />
-  <meta property="og:title" content="david safanyuk and Eunike Olivia&#x27;s Wedding Website - The Knot" />
+  <meta property="og:title" content="David Safanyukand Eunike Olivia&#x27;s Wedding Website - The Knot" />
   <meta property="og:description"
-    content="Welcome to david safanyuk and Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more at The Knot." />
+    content="Welcome to David Safanyukand Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more at The Knot." />
   <meta property="og:image"
     content="//www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_0-cr_0.180.6000.3180?compress=true" />
   <meta property="og:type" content="website" />
@@ -369,7 +369,7 @@
               srcSet="//www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_auto-cr_0.180.6000.3180-rs_768.h?ordering=explicit" />
             <source
               srcSet="//www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_auto-cr_0.180.6000.3180-rs_480.h?ordering=explicit" />
-            <img loading="eager" alt="david &amp; Eunike Home Page Banner" width="6000" height="3000"
+            <img loading="eager" alt="David &amp; Eunike Home Page Banner" width="6000" height="3000"
               src="//www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_auto-cr_0.180.6000.3180-rs_768.h?ordering=explicit"
               class="css-1ago99h" />
           </picture>
@@ -506,7 +506,7 @@
               }
             }
           </style>
-          <h1 data-testid="header-couple-names" class="css-vkm301">david + Eunike</h1>
+          <h1 data-testid="header-couple-names" class="css-vkm301">David + Eunike</h1>
           <style data-emotion="css 1x6hq4r">
             .css-1x6hq4r {
               line-height: 1;
@@ -562,7 +562,7 @@
           }
         </style>
         <header class="css-ou2xl5">
-          <h1 data-testid="header-couple-names" class="css-vkm301">david + Eunike</h1>
+          <h1 data-testid="header-couple-names" class="css-vkm301">David + Eunike</h1>
           <div data-testid="header-wedding-date-location" class="css-1x6hq4r">September 29, 2023 • Jakarta, Indonesia
           </div>
           <div data-testid="header-countdown" class="css-1x6hq4r">82 Days To Go!</div>
@@ -1029,7 +1029,7 @@
               srcSet="//www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_auto-cr_0.180.6000.3180-rs_768.h?ordering=explicit" />
             <source
               srcSet="//www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_auto-cr_0.180.6000.3180-rs_480.h?ordering=explicit" />
-            <img loading="eager" alt="david &amp; Eunike Home Page Banner" width="6000" height="3000"
+            <img loading="eager" alt="David &amp; Eunike Home Page Banner" width="6000" height="3000"
               src="//www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_auto-cr_0.180.6000.3180-rs_768.h?ordering=explicit"
               class="css-1ago99h" />
           </picture>
