--- a/photos.html
+++ b/photos.html
@@ -34,16 +34,16 @@
   </script>
   <meta name="viewport" content="width=device-width" />
   <meta charSet="utf-8" />
-  <title>David safanyuk and Eunike Olivia&#x27;s Wedding</title>
+  <title>David Safanyukand Eunike Olivia&#x27;s Wedding</title>
   <meta name="description"
-    content="Welcome to david safanyuk and Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
+    content="Welcome to David Safanyukand Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
   <link rel="canonical" href="https://DavidAndEunike.wedding" />
   <meta name="googlebot" content="noindex,nofollow" />
   <meta name="robots" content="noindex,nofollow" />
   <meta property="og:url" content="https://DavidAndEunike.wedding" />
-  <meta property="og:title" content="David safanyuk and Eunike Olivia&#x27;s Wedding" />
+  <meta property="og:title" content="David Safanyukand Eunike Olivia&#x27;s Wedding" />
   <meta property="og:description"
-    content="Welcome to david safanyuk and Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
+    content="Welcome to David Safanyukand Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
     <meta property="og:image"
     content="https//www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_0-cr_0.180.6000.3180?compress=true" />
   <link type="image/png" sizes="32x32" rel="icon" href="./icons8-romance-32.png">
@@ -458,7 +458,7 @@
               }
             }
           </style>
-          <h1 data-testid="header-couple-names" class="css-vkm301">david + Eunike</h1>
+          <h1 data-testid="header-couple-names" class="css-vkm301">David + Eunike</h1>
           <style data-emotion="css 1x6hq4r">
             .css-1x6hq4r {
               line-height: 1;
@@ -514,7 +514,7 @@
           }
         </style>
         <header class="css-ou2xl5">
-          <h1 data-testid="header-couple-names" class="css-vkm301">david + Eunike</h1>
+          <h1 data-testid="header-couple-names" class="css-vkm301">David + Eunike</h1>
           <div data-testid="header-wedding-date-location" class="css-1x6hq4r">September 29, 2023 • Jakarta, Indonesia
           </div>
           <div data-testid="header-countdown" class="css-1x6hq4r">87 Days To Go!</div>
