--- a/qa.html
+++ b/qa.html
@@ -25,16 +25,16 @@
   </script>
   <meta name="viewport" content="width=device-width" />
   <meta charSet="utf-8" />
-  <title>David safanyuk and Eunike Olivia&#x27;s Wedding</title>
+  <title>David Safanyukand Eunike Olivia&#x27;s Wedding</title>
   <meta name="description"
-    content="Welcome to david safanyuk and Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
+    content="Welcome to David Safanyukand Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
   <link rel="canonical" href="https://DavidAndEunike.wedding" />
   <meta name="googlebot" content="noindex,nofollow" />
   <meta name="robots" content="noindex,nofollow" />
   <meta property="og:url" content="https://DavidAndEunike.wedding" />
-  <meta property="og:title" content="David safanyuk and Eunike Olivia&#x27;s Wedding" />
+  <meta property="og:title" content="David Safanyukand Eunike Olivia&#x27;s Wedding" />
   <meta property="og:description"
-    content="Welcome to david safanyuk and Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
+    content="Welcome to David Safanyukand Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
 
   <link type="image/png" sizes="32x32" rel="icon" href="./icons8-romance-32.png">
   <meta name="theme-color" content="#231f20" />
@@ -445,7 +445,7 @@
               }
             }
           </style>
-          <h1 data-testid="header-couple-names" class="css-vkm301">david + Eunike</h1>
+          <h1 data-testid="header-couple-names" class="css-vkm301">David + Eunike</h1>
           <style data-emotion="css 1x6hq4r">
             .css-1x6hq4r {
               line-height: 1;
@@ -501,7 +501,7 @@
           }
         </style>
         <header class="css-ou2xl5">
-          <h1 data-testid="header-couple-names" class="css-vkm301">david + Eunike</h1>
+          <h1 data-testid="header-couple-names" class="css-vkm301">David + Eunike</h1>
           <div data-testid="header-wedding-date-location" class="css-1x6hq4r">September 29, 2023 • Jakarta, Indonesia
           </div>
           <div data-testid="header-countdown" class="css-1x6hq4r">87 Days To Go!</div>
