--- a/registry.html
+++ b/registry.html
@@ -57,16 +57,16 @@
   </script>
   <meta name="viewport" content="width=device-width" />
   <meta charSet="utf-8" />
-  <title>David safanyuk and Eunike Olivia&#x27;s Wedding</title>
+  <title>David Safanyukand Eunike Olivia&#x27;s Wedding</title>
   <meta name="description"
-    content="Welcome to david safanyuk and Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
+    content="Welcome to David Safanyukand Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
   <link rel="canonical" href="https://DavidAndEunike.wedding" />
   <meta name="googlebot" content="noindex,nofollow" />
   <meta name="robots" content="noindex,nofollow" />
   <meta property="og:url" content="https://DavidAndEunike.wedding" />
-  <meta property="og:title" content="David safanyuk and Eunike Olivia&#x27;s Wedding" />
+  <meta property="og:title" content="David Safanyukand Eunike Olivia&#x27;s Wedding" />
   <meta property="og:description"
-    content="Welcome to david safanyuk and Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
+    content="Welcome to David Safanyukand Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
 
   <link type="image/png" sizes="32x32" rel="icon" href="./icons8-romance-32.png">
   <meta name="theme-color" content="#231f20" />
