--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
       document.head.querySelector("meta[property='og:url']").content = "https://davidandeunike.wedding/";
       document.head.querySelector("meta[property='og:title']").content = "David And Eunike's Wedding";
       document.head.querySelector("meta[property='og:description']").content = "David And Eunike's Wedding";
-      document.head.querySelector("meta[property='og:image']").content = "https//www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_0-cr_0.180.6000.3180?compress=true";
+      document.head.querySelector("meta[property='og:image']").content = "https://www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_0-cr_0.180.6000.3180?compress=true";
       
       // change anchor tag that has an href equal to /us/david-safanyuk-and-eunike-olivia-sep-2023/photos
       // document.querySelector("a[href='/photos']").href = "./photos.html";
