--- a/photos.html
+++ b/photos.html
@@ -23,7 +23,7 @@
       //   document.head.appendChild(meta);
       // }
 
-      document.head.querySelector("meta[property='og:image']").content = "https//www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_0-cr_0.180.6000.3180?compress=true";
+      document.head.querySelector("meta[property='og:image']").content = "https://www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_0-cr_0.180.6000.3180?compress=true";
 
       // change anchor tag that has an href equal to /photos
       // document.querySelector("a[href='/photos']").href = "./photos.html";
@@ -45,7 +45,7 @@
   <meta property="og:description"
     content="Welcome to David Safanyukand Eunike Olivia&#x27;s Wedding Website! View photos, directions, registry details and more." />
   <meta property="og:image"
-    content="https//www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_0-cr_0.180.6000.3180?compress=true" />
+    content="https://www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_0-cr_0.180.6000.3180?compress=true" />
   <link type="image/png" sizes="32x32" rel="icon" href="./icons8-romance-32.png">
   <meta name="theme-color" content="#231f20" />
   <meta name="next-head-count" content="17" />
