fix canonical link

--- a/photos.html
+++ b/photos.html
@@ -16,6 +16,8 @@
       document.head.querySelector("meta[property='og:url']").content = "https://davidandeunike.wedding/our-story";
       document.head.querySelector("meta[property='og:title']").content = "David And Eunike's Story";
       document.head.querySelector("meta[property='og:description']").content = "David And Eunike's Story";
+      document.head.querySelector("link[rel='canonical']").href = "https://davidandeunike.wedding/";
+
       // // create meta element if it doesn't exist
       // if (!document.head.querySelector("meta[property='og:image']")) {
       //   var meta = document.createElement('meta');
@@ -916,7 +918,7 @@
                     margin: 0;
                     padding: 8px 0;
                   }
-                </style><a class="css-1x9swe2" href="/us/david-safanyuk-and-eunike-olivia-sep-2023">
+                </style><a class="css-1x9swe2" href="/">
                   <style data-emotion="css 533iwp">
                     .css-533iwp {
                       font-family: EB Garamond;
