--- a/registry.html
+++ b/registry.html
@@ -20,6 +20,7 @@
       document.head.querySelector("meta[property='og:description']").content = "David And Eunike's Story";
       // document.head.querySelector("meta[property='og:image']").content = "https://www.theknot.com/tk-media/images/4f1c68e6-e991-4797-9700-d71b79e7cd13~rt_0-cr_0.180.6000.3180?compress=true";
       // Select the target element
+      document.head.querySelector("link[rel='canonical']").href = "https://davidandeunike.wedding/";
 
     }
     // change anchor tag that has an href equal to /us/david-safanyuk-and-eunike-olivia-sep-2023/photos
