--- a/home.html
+++ b/home.html
@@ -19,19 +19,21 @@
       document.head.querySelector("link[rel='canonical']").href = "https://davidandeunike.wedding/";
       // change anchor tag that has an href equal to /us/david-safanyuk-and-eunike-olivia-sep-2023/photos
       // document.querySelector("a[href='/photos']").href = "./photos.html";
+      // create div with class video-container
+      var videoContainer = document.createElement("div");
+      videoContainer.setAttribute("class", "video-container");
 
       var youtubeIframe = document.createElement("iframe");
-      youtubeIframe.setAttribute("width", "560");
-      youtubeIframe.setAttribute("height", "315");
       youtubeIframe.setAttribute("src", "https://www.youtube.com/embed/s9ElPBdixFo");
       youtubeIframe.setAttribute("title", "YouTube video player");
       youtubeIframe.setAttribute("frameborder", "0");
       youtubeIframe.setAttribute("allow", "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share");
       youtubeIframe.setAttribute("allowfullscreen", "");
-      youtubeIframe.setAttribute("style", "margin: 0 auto; display: block;");
-
+      // youtubeIframe.setAttribute("style", "margin: 0 auto; display: block;");
+      // put iframe within div
+      videoContainer.appendChild(youtubeIframe);
       // insert this iframe before the footer tag
-      document.querySelector("footer").insertAdjacentElement("beforebegin", youtubeIframe);
+      document.querySelector("footer").insertAdjacentElement("beforebegin", videoContainer);
       
 
 
@@ -66,6 +68,20 @@
     [data-pagelet-render-state=error]~[data-pagelet-role=placeholder],
     [data-pagelet-render-state=ready]~[data-pagelet-role=placeholder] {
       display: none
+    }
+  </style>
+  <style>
+    .video-container {
+      position: relative;
+      padding-bottom: 56.25%;
+    }
+
+    .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
   </style>
   <script class="ot-sdk-show-settings"
