update dress code

--- a/home.html
+++ b/home.html
@@ -1350,7 +1350,7 @@
                 <div class="css-1kqbn3e">Jalan Jendral sudirman kav 52-53, Daerah Khusus Ibukota Jakarta, 12190,
                   Indonesia</div>
               </div>
-              <div class="css-1kqbn3e">Attire: Formal/ Semi Formal</div>
+              <div class="css-1kqbn3e">Attire: Formal</div>
             </div>
             <style data-emotion="css 1nigrxg">
               .css-1nigrxg {
@@ -1549,7 +1549,7 @@
                     <div class="css-1wr11k6">Jalan Jendral sudirman kav 52-53, Daerah Khusus Ibukota Jakarta, 12190,
                       Indonesia</div>
                   </div>
-                  <div class="css-1bpga1p">Attire: Formal Or Semi Formal</div>
+                  <div class="css-1bpga1p">Attire: Formal</div>
                 </div>
               </div>
               <div data-testid="event-430f3331-a307-4650-8e67-e7bcaf897f93" class="css-10rct3i">
@@ -1564,7 +1564,7 @@
                     <div class="css-1wr11k6">Jalan Jendral sudirman kav 52-53, Daerah Khusus Ibukota Jakarta, 12190,
                       Indonesia</div>
                   </div>
-                  <div class="css-1bpga1p">Attire: Formal / Semi Formal</div>
+                  <div class="css-1bpga1p">Attire: Formal </div>
                 </div>
               </div>
             </div>
@@ -2518,7 +2518,7 @@
               },
               "GDS_SubEvent:c571256b-58e3-45fb-8181-56eb4a287844": {
                   "__typename": "GDS_SubEvent",
-                  "attire": "Formal Or Semi Formal",
+                  "attire": "Formal",
                   "endTime": "17:00",
                   "id": "c571256b-58e3-45fb-8181-56eb4a287844",
                   "name": "Ceremony",
@@ -2534,7 +2534,7 @@
               },
               "GDS_SubEvent:430f3331-a307-4650-8e67-e7bcaf897f93": {
                   "__typename": "GDS_SubEvent",
-                  "attire": "Formal / Semi Formal",
+                  "attire": "Formal ",
                   "endTime": "22:00",
                   "id": "430f3331-a307-4650-8e67-e7bcaf897f93",
                   "name": "Reception",
@@ -2551,7 +2551,7 @@
               "GDS_Event:148f6de2-c274-468f-ae91-5c34704f51f6": {
                   "__typename": "GDS_Event",
                   "id": "148f6de2-c274-468f-ae91-5c34704f51f6",
-                  "attire": "Formal/ Semi Formal",
+                  "attire": "Formal",
                   "endTime": null,
                   "name": "Wedding Day (JKT)",
                   "notes": null,
