--- a/home.html
+++ b/home.html
@@ -3409,7 +3409,7 @@
                   "id": 101773098,
                   "type": "QuestionItem",
                   "rank": 3,
-                  "question": "Will there be any provided accommodations/transportation?",
+                  "question": "Will there be any provided accommodations or transportation?",
                   "answer": "At this time, there will not be any provided accommodations. However, there are definitely hotels that can fit your budget/preferences.\n\nFor transportation, please reach out to us directly to help organize transportation to/from the airport (CGK airport code)"
               },
               "WWS_Page:83235692": {
