--- a/qa.html
+++ b/qa.html
@@ -1057,7 +1057,7 @@
           </div>
           <div class="QuestionItem css-o6iq6k" data-testid="question-item-101773098">
             <div class="css-1oteowz"></div>
-            <h4 class="css-1ktgrt9">Will there be any provided accommodations/transportation?</h4>
+            <h4 class="css-1ktgrt9">Will there be any provided accommodations or transportation?</h4>
             <div class="css-5ab9o6">At this time, there will not be any provided accommodations. However, there are
               definitely hotels that can fit your budget/preferences.
 
@@ -2363,7 +2363,7 @@
               "id": 101773098,
               "type": "QuestionItem",
               "rank": 3,
-              "question": "Will there be any provided accommodations/transportation?",
+              "question": "Will there be any provided accommodations or transportation?",
               "answer": "At this time, there will not be any provided accommodations. However, there are definitely hotels that can fit your budget/preferences.\n\nFor transportation, please reach out to us directly to help organize transportation to/from the airport (CGK airport code)"
           },
           "WWS_Page:83235692": {
