--- a/home.html
+++ b/home.html
@@ -559,9 +559,21 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                     max-width: 1280px;
                 }
 
+                .css-3obt3j {
+                    max-height: 120px;
+                    margin-bottom: 20px;
+                    width: 100%;
+                    max-width: 1280px;
+                    display: none;
+                }
+
                 @media (max-width: 768px) {
                     .css-108ctfw {
                         max-width: 475px;
+                    }
+
+                    .css-3obt3j {
+                        display: none;
                     }
                 }
 
@@ -569,8 +581,49 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                     .css-108ctfw {
                         display: none;
                     }
+
+                    .css-3obt3j {
+                        display: block;
+                    }
                 }
+
+
             </style>
+            <picture class="css-3obt3j">
+                <source
+                        media="(min-resolution: 192dpi) and (min-width: 1280px),(-webkit-min-device-pixel-ratio: 2) and (min-width: 1280px)"
+                        srcset="https://media-api.xogrp.com/images/04638a8f-8fb6-4a33-b57a-f93c45300494~rt_auto-rs_3000.h?ordering=explicit">
+                <source
+                        media="(min-resolution: 192dpi) and (min-width: 1024px),(-webkit-min-device-pixel-ratio: 2) and (min-width: 1024px)"
+                        srcset="https://media-api.xogrp.com/images/04638a8f-8fb6-4a33-b57a-f93c45300494~rt_auto-rs_2560.h?ordering=explicit">
+                <source
+                        media="(min-resolution: 192dpi) and (min-width: 768px),(-webkit-min-device-pixel-ratio: 2) and (min-width: 768px)"
+                        srcset="https://media-api.xogrp.com/images/04638a8f-8fb6-4a33-b57a-f93c45300494~rt_auto-rs_2048.h?ordering=explicit">
+                <source media="(min-resolution: 192dpi), (-webkit-min-device-pixel-ratio: 2)"
+                        srcset="https://media-api.xogrp.com/images/e2418f96-9442-4ec8-8ec9-0abc8c590e11~rt_auto-rs_1536.h?ordering=explicit">
+                <source
+                        media="(min-resolution: 144dpi) and (min-width: 1280px),(-webkit-min-device-pixel-ratio: 1.5) and (min-width: 1280px)"
+                        srcset="https://media-api.xogrp.com/images/04638a8f-8fb6-4a33-b57a-f93c45300494~rt_auto-rs_2250.h?ordering=explicit">
+                <source
+                        media="(min-resolution: 144dpi) and (min-width: 1024px),(-webkit-min-device-pixel-ratio: 1.5) and (min-width: 1024px)"
+                        srcset="https://media-api.xogrp.com/images/04638a8f-8fb6-4a33-b57a-f93c45300494~rt_auto-rs_1920.h?ordering=explicit">
+                <source
+                        media="(min-resolution: 144dpi) and (min-width: 768px),(-webkit-min-device-pixel-ratio: 1.5) and (min-width: 768px)"
+                        srcset="https://media-api.xogrp.com/images/04638a8f-8fb6-4a33-b57a-f93c45300494~rt_auto-rs_1536.h?ordering=explicit">
+                <source media="(min-resolution: 144dpi), (-webkit-min-device-pixel-ratio: 1.5)"
+                        srcset="https://media-api.xogrp.com/images/e2418f96-9442-4ec8-8ec9-0abc8c590e11~rt_auto-rs_1152.h?ordering=explicit">
+                <source media="(min-width: 1280px)"
+                        srcset="https://media-api.xogrp.com/images/04638a8f-8fb6-4a33-b57a-f93c45300494~rt_auto-rs_1500.h?ordering=explicit">
+                <source media="(min-width: 1024px)"
+                        srcset="https://media-api.xogrp.com/images/04638a8f-8fb6-4a33-b57a-f93c45300494~rt_auto-rs_1280.h?ordering=explicit">
+                <source media="(min-width: 768px)"
+                        srcset="https://media-api.xogrp.com/images/04638a8f-8fb6-4a33-b57a-f93c45300494~rt_auto-rs_1024.h?ordering=explicit">
+                <source
+                        srcset="https://media-api.xogrp.com/images/e2418f96-9442-4ec8-8ec9-0abc8c590e11~rt_auto-rs_768.h?ordering=explicit">
+                <img alt="" class="css-1ago99h"
+                     loading="eager"
+                     src="https://media-api.xogrp.com/images/04638a8f-8fb6-4a33-b57a-f93c45300494~rt_auto-rs_1024.h?ordering=explicit">
+            </picture>
             <picture class="css-108ctfw">
                 <source
                         media="(min-resolution: 192dpi) and (min-width: 1280px),(-webkit-min-device-pixel-ratio: 2) and (min-width: 1280px)"
@@ -602,6 +655,11 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                         srcSet="https://media-api.xogrp.com/images/04638a8f-8fb6-4a33-b57a-f93c45300494~rt_auto-rs_768.h?ordering=explicit"/>
                 <source
                         srcSet="https://media-api.xogrp.com/images/e2418f96-9442-4ec8-8ec9-0abc8c590e11~rt_auto-rs_480.h?ordering=explicit"/>
+                <style data-emotion="css 1ago99h">
+                    .css-1ago99h {
+                        width: 100%;
+                    }
+                </style>
                 <img alt="" class="css-1ago99h"
                      loading="eager"
                      src="https://media-api.xogrp.com/images/04638a8f-8fb6-4a33-b57a-f93c45300494~rt_auto-rs_768.h?ordering=explicit"/>
