change RSVP button text

--- a/home.html
+++ b/home.html
@@ -1914,7 +1914,7 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                                     color: #231f20;
                                 }
                             </style>
-                            <a class="css-1i1d4as" href="/rsvp">RSVP</a>
+                            <a class="css-1i1d4as" href="/rsvp">Click to RSVP</a>
 
                         </div>
                     </div>
