--- a/home.html
+++ b/home.html
@@ -766,8 +766,7 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                         }
                     }
                 </style>
-                <div class="css-1x6hq4r" data-testid="header-wedding-date-location">September 29, 2023 • Jakarta,
-                    Indonesia
+                <div class="css-1x6hq4r" data-testid="header-wedding-date-location">09.29.2023
                 </div>
                 <div class="css-1x6hq4r" data-testid="header-countdown">87 Days To Go!</div>
             </header>
@@ -1333,70 +1332,6 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                         }
                     }
                 </style>
-                <div class="css-d5g1lp">
-                    <style data-emotion="css 1ro943u">
-                        .css-1ro943u {
-                            padding: 0 36px 20px;
-                            border-bottom: 1px solid #FFFFFF;
-                        }
-
-                        @media (min-width: 640px) {
-                            .css-1ro943u {
-                                border-bottom: none;
-                                display: -webkit-box;
-                                display: -webkit-flex;
-                                display: -ms-flexbox;
-                                display: flex;
-                                -webkit-box-pack: end;
-                                -ms-flex-pack: end;
-                                -webkit-justify-content: flex-end;
-                                justify-content: flex-end;
-                                -webkit-align-items: center;
-                                -webkit-box-align: center;
-                                -ms-flex-align: center;
-                                align-items: center;
-                                padding: 20px 72px 20px 0;
-                                width: 315px;
-                                border-right: 1px solid #FFFFFF;
-                            }
-                        }
-                    </style>
-                    <div class="css-1ro943u">
-                        <style data-emotion="css 1yltisf">
-                            .css-1yltisf {
-                                text-align: center;
-                            }
-                        </style>
-                        <div class="css-1yltisf"><span>David Safanyuk</span></div>
-                    </div>
-                    <style data-emotion="css 1jqzgsk">
-                        .css-1jqzgsk {
-                            padding: 20px 36px 0;
-                        }
-
-                        @media (min-width: 640px) {
-                            .css-1jqzgsk {
-                                display: -webkit-box;
-                                display: -webkit-flex;
-                                display: -ms-flexbox;
-                                display: flex;
-                                -webkit-box-pack: start;
-                                -ms-flex-pack: start;
-                                -webkit-justify-content: flex-start;
-                                justify-content: flex-start;
-                                -webkit-align-items: center;
-                                -webkit-box-align: center;
-                                -ms-flex-align: center;
-                                align-items: center;
-                                padding: 20px 0 20px 72px;
-                                width: 315px;
-                            }
-                        }
-                    </style>
-                    <div class="css-1jqzgsk">
-                        <div class="css-1yltisf">Eunike Olivia</div>
-                    </div>
-                </div>
                 <style data-emotion="css o6iq6k">
                     .css-o6iq6k {
                         padding: 1px 20px;
@@ -1548,7 +1483,7 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                             -webkit-flex-direction: column;
                             -ms-flex-direction: column;
                             flex-direction: column;
-                            margin: 48px 0 24px;
+                            margin: 10px 0 24px;
                             text-align: center;
                         }
                     </style>
@@ -1577,59 +1512,9 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                                     }
                                 }
                             </style>
-                            <h4 class="css-utp8va">Wedding Day</h4>
-                            <style data-emotion="css 1k5zjx5">
-                                .css-1k5zjx5 {
-                                    margin: 8px 0;
-                                    font-family: EB Garamond;
-                                    letter-spacing: 3px;
-                                    color: #FFFFFF;
-                                    font-size: 22px;
-                                    font-weight: 500;
-                                    text-transform: uppercase;
-                                }
-
-                                @media (max-width: 640px) {
-                                    .css-1k5zjx5 {
-                                        font-size: calc(22px * 0.75);
-                                    }
-                                }
-
-                                @media (max-width: 640px) {
-                                    .css-1k5zjx5 {
-                                        font-size: calc(22px * 0.9);
-                                    }
-                                }
-                            </style>
-                            <div class="css-1k5zjx5">September 29, 2023</div>
-                            <div class="css-1k5zjx5"></div>
-                        </div>
-                        <div class="css-15r1rym">
-                            <style data-emotion="css 1kqbn3e">
-                                .css-1kqbn3e {
-                                    margin: 4px 0;
-                                    font-family: EB Garamond;
-                                    letter-spacing: 1px;
-                                    color: #FFFFFF;
-                                    font-size: 17px;
-                                    font-weight: 500;
-                                }
-
-                                @media (max-width: 640px) {
-                                    .css-1kqbn3e {
-                                        font-size: calc(17px * 0.875);
-                                    }
-                                }
-
-                                @media (max-width: 640px) {
-                                    .css-1kqbn3e {
-                                        font-size: calc(18px * 0.9);
-                                    }
-                                }
-                            </style>
-                            <div class="css-1kqbn3e">The Ritz-Carlton Jakarta, Pacific Place</div>
 
                         </div>
+
                         <style data-emotion="css 1nigrxg">
                             .css-1nigrxg {
                                 border-top: 1px solid rgba(255, 255, 255, 15%);
@@ -1681,7 +1566,6 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                                             color: #FFFFFF;
                                             font-size: 22px;
                                             font-weight: 500;
-                                            text-transform: uppercase;
                                         }
 
                                         @media (max-width: 640px) {
@@ -1696,7 +1580,7 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                                             }
                                         }
                                     </style>
-                                    <h4 class="css-k5b63w">4:00 PM<!-- --> –5:00 PM</h4>
+                                    <h4 class="css-k5b63w">4:00 PM</h4>
                                 </div>
                                 <style data-emotion="css o4mq2x">
                                     .css-o4mq2x {
@@ -1752,14 +1636,10 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                                             color: #FFFFFF;
                                             font-size: 22px;
                                             font-weight: 500;
-                                            text-transform: uppercase;
-                                            margin: 16px 0;
                                             font-family: EB Garamond;
                                             letter-spacing: 3px;
                                             color: #FFFFFF;
                                             font-size: 20px;
-                                            font-weight: 500;
-                                            text-transform: uppercase;
                                             line-height: 22px;
                                         }
 
@@ -1793,7 +1673,8 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                                             }
                                         }
                                     </style>
-                                    <h4 class="css-1krwkps">4:00 PM<!-- --> –5:00 PM</h4>
+                                    <h4 class="css-1krwkps">Friday, September 29th 2023</h4>
+                                    <h4 class="css-1krwkps">4:00 PM</h4>
                                     <h4 class="css-k5b63w">Ceremony</h4>
                                     <style data-emotion="css 1bpga1p">
                                         .css-1bpga1p {
@@ -1834,9 +1715,10 @@ window.UNION_INTERNAL_FRAGMENT_LOADER.load({
                             </div>
                             <div class="css-10rct3i" data-testid="event-430f3331-a307-4650-8e67-e7bcaf897f93">
                                 <div class="css-8m99gz">
-                                    <h4 class="css-k5b63w">6:30 PM<!-- --> –10:00 PM</h4>
+                                    <h4 class="css-k5b63w">6:30 PM</h4>
                                 </div>
                                 <div class="css-o4mq2x">
+                                    <h4 class="css-1krwkps">Friday, September 29th 2023</h4>
                                     <h4 class="css-1krwkps">6:30 PM<!-- --> –10:00 PM</h4>
                                     <h4 class="css-k5b63w">Reception</h4>
                                     <div class="css-1bpga1p">
