--- a/home.html
+++ b/home.html
@@ -490,8 +490,7 @@
             </style>
             <header class="css-ou2xl5">
                 <h1 class="css-vkm301" data-testid="header-couple-names">David + Eunike</h1>
-                <div class="css-1x6hq4r" data-testid="header-wedding-date-location">September 29, 2023 • Jakarta,
-                    Indonesia
+                <div class="css-1x6hq4r" data-testid="header-wedding-date-location">09.29.2023
                 </div>
                 <div class="css-1x6hq4r" data-testid="header-countdown">87 Days To Go!</div>
             </header>
