add google link

--- a/home.html
+++ b/home.html
@@ -1273,8 +1273,9 @@
                                             }
                                         }
                                     </style>
-                                    <h4 class="css-1krwkps">Friday, September 29th 2023</h4>
                                     <h4 class="css-1krwkps">4:00 PM</h4>
+                                    <h4 class="css-k5b63w">Friday, September 29th 2023</h4>
+
                                     <h4 class="css-k5b63w">Holy Matrimony</h4>
                                     <style data-emotion="css 1bpga1p">
                                         .css-1bpga1p {
@@ -1302,13 +1303,18 @@
                                         <style data-emotion="css 1wr11k6">
                                             .css-1wr11k6 {
                                                 margin: 2px 0;
+                                                text-decoration: underline;
                                             }
                                         </style>
+                                        <a href="https://goo.gl/maps/inPVfibKhDNDV9vt9">
                                         <div class="css-1wr11k6">The Ritz-Carlton Jakarta, Pacific Place</div>
-                                        <div class="css-1wr11k6">Jalan Jendral sudirman kav 52-53, Daerah Khusus Ibukota
+                                        <div class="css-1wr11k6">
+                                            Jalan Jendral sudirman kav 52-53, Daerah Khusus Ibukota
                                             Jakarta, 12190,
                                             Indonesia
+
                                         </div>
+                                        </a>
                                     </div>
                                     <div class="css-1bpga1p">Attire: Formal</div>
                                 </div>
@@ -1318,15 +1324,21 @@
                                     <h4 class="css-k5b63w">6:30 PM</h4>
                                 </div>
                                 <div class="css-o4mq2x">
-                                    <h4 class="css-1krwkps">Friday, September 29th 2023</h4>
-                                    <h4 class="css-1krwkps">6:30 PM<!-- --> –10:00 PM</h4>
+                                    <h4 class="css-1krwkps">6:30 PM</h4>
+                                    <h4 class="css-k5b63w">Friday, September 29th 2023</h4>
+
                                     <h4 class="css-k5b63w">Reception</h4>
                                     <div class="css-1bpga1p">
-                                        <div class="css-1wr11k6">The Ritz-Carlton Jakarta, Pacific Place</div>
-                                        <div class="css-1wr11k6">Jalan Jendral sudirman kav 52-53, Daerah Khusus Ibukota
-                                            Jakarta, 12190,
-                                            Indonesia
-                                        </div>
+
+                                        <a href="https://goo.gl/maps/inPVfibKhDNDV9vt9">
+                                            <div class="css-1wr11k6">The Ritz-Carlton Jakarta, Pacific Place</div>
+                                            <div class="css-1wr11k6">
+                                                Jalan Jendral sudirman kav 52-53, Daerah Khusus Ibukota
+                                                Jakarta, 12190,
+                                                Indonesia
+
+                                            </div>
+                                        </a>
                                     </div>
                                     <div class="css-1bpga1p">Attire: Formal</div>
                                 </div>
