--- a/qa.html
+++ b/qa.html
@@ -2355,8 +2355,8 @@
               "id": 101772939,
               "type": "QuestionItem",
               "rank": 2,
-              "question": "This will be our first time in Indonesia, what can we expect?",
-              "answer": "Welcome! If you are planning to come, please do us a favor and RSVP ASAP. We totally understand if this is short notice for some people and cannot make it. After you confirm your attendance, Dave can reach out to help make arrangements (Flights/hotels/transport)"
+              "question": "Can we bring our kids?",
+              "answer": "Although we love your children, we regretfully cannot accommodate them at the venue due to limited space."
           },
           "WWS_QuestionItem:101773098": {
               "__typename": "WWS_QuestionItem",
@@ -2366,6 +2366,14 @@
               "question": "Will there be any provided accommodations or transportation?",
               "answer": "At this time, there will not be any provided accommodations. However, there are definitely hotels that can fit your budget/preferences.\n\nFor transportation, please reach out to us directly to help organize transportation to/from the airport (CGK airport code)"
           },
+        "WWS_QuestionItem:101773099": {
+          "__typename": "WWS_QuestionItem",
+          "id": 101773099,
+          "type": "QuestionItem",
+          "rank": 3,
+          "question": "Can we send you flowers?",
+          "answer": "As much as we do appreciate your kind thoughts, but please refrain from sending flower stand or arrangements due to hotel regulation. Other form of gift are appreciated!"
+        },
           "WWS_Page:83235692": {
               "__typename": "WWS_Page",
               "id": 83235692,
@@ -2383,9 +2391,9 @@
                   {
                       "__ref": "WWS_QuestionItem:101772939"
                   },
-                  {
-                      "__ref": "WWS_QuestionItem:101773098"
-                  }
+                {
+                  "__ref": "WWS_QuestionItem:101773099"
+                }
               ]
           },
           "WWS_Page:83235693": {
