--- a/home.html
+++ b/home.html
@@ -378,6 +378,41 @@
             </style>
             <header class="css-mj00yc">
                 <style data-emotion="css vkm301">
+                    .css-1atfg69 {
+                        left: 0px;
+                        overflow: hidden;
+                        position: fixed;
+                        top: 0px;
+                        transition: all 0.5s ease 0s;
+                        width: 100%;
+                        z-index: 18;
+                        background-color: rgb(35, 31, 32);
+                        height: 100%;
+                    }
+                    .css-i5u0r2::before,
+                    .css-i5u0r2::after {
+                        content: "";
+                        height: 3px;
+                        left: 20%;
+                        margin: -0.15em auto 0px;
+                        border-radius: 3px;
+                        position: absolute;
+                        top: 50%;
+                        transition: all 0.4s ease 0s;
+                        width: 24px;
+                        background: rgb(255, 255, 255);
+                        box-shadow: rgb(255, 255, 255) 0px -10px 0px 0px, rgb(255, 255, 255) 0px 10px 0px 0px;
+                    }
+
+                    .css-i5u0r2::before {
+                        box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px;
+                        transform: rotateZ(-45deg);
+                    }
+
+                    .css-i5u0r2::after {
+                        box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px;
+                        transform: rotateZ(45deg);
+                    }
                     .css-vkm301 {
                         line-height: 1;
                         margin: 16px 0;
